updatede index.html

--- a/index.html
+++ b/index.html
@@ -1,13 +1,28 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React</title>
-  </head>
-  <body>
-    <div id="root"></div>
-    <script type="module" src="/src/main.jsx"></script>
-  </body>
+
+<head>
+  <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+  <link rel="manifest" href="/site.webmanifest">
+  <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#5bbad5">
+  <meta name="msapplication-TileColor" content="#da532c">
+  <meta name="theme-color" content="#ffffff">
+  <meta name="title" content="SarataniAi">
+  <meta name="description"
+    content="SarataniAi is a leading provider of digital healthcare solutions, specializing in cancer screening and diagnosis using artificial intelligence. Our evidence-based digital solutions are designed to facilitate the early detection and treatment of cancer, with a focus on improving patient outcomes. ">
+  <meta name="keywords"
+    content="Cancer screening,Cancer diagnosis,Digital healthcare,Artificial intelligence,Machine learningEarly detectionEvidence-based solutionsCommunity engagementPatient outcomesMedical researchData analytics,Medical imaging,Healthcare technology,Medical innovation,Africa,SarataniAi,Saratanitz,Saratanitwitter,patrickbijampola,pbijampola">
+  <meta name="robots" content="index, follow">
+  <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+  <meta name="language" content="English">
+  <title>SarataniAi</title>
+</head>
+
+<body>
+  <div id="root"></div>
+  <script type="module" src="/src/main.jsx"></script>
+</body>
+
 </html>
